--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         
         <nav class="sidebar-left">
             <div class="logo-area">
-                <img src="https://placehold.co/150x60/21201d/ff7575?text=ISF+Logo" alt="ISF Logo" class="isf-logo">
-            </div>
+    <div class="isf-logo-placeholder">
+        <i class="fa-solid fa-shield-halved"></i> ISF.gg
+    </div>
+</div>
 
             <ul class="nav-links">
                 <li><a href="#" class="disabled"><i class="fa-solid fa-hand-paper"></i> Play</a></li>
@@ -51,9 +53,9 @@
                 <span class="username">Opponent</span>
             </div>
 
-            <div class="board-center">
-                <img src="https://placehold.co/500x500/142819/ff7575?text=Place+Ace+Cards+Here" alt="Slaps Table" class="hero-cards">
-            </div>
+            <<div class="board-center">
+    <img src="https://images.unsplash.com/photo-1606167668584-78701c57f13d?q=80&w=500&auto=format&fit=crop" alt="Slaps Table Cards" class="hero-cards">
+</div>
 
             <div class="player-profile player">
                 <div class="avatar"></div>
