--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         
         <nav class="sidebar-left">
             <div class="logo-area">
-                <div class="isf-logo-placeholder">
-                    <i class="fa-solid fa-shield-halved"></i> ISF.gg
-                </div>
+                <div class="logo-area">
+    <img src="assets/ISF Pink.png" alt="ISF Logo" class="isf-logo">
+</div>
             </div>
 
             <ul class="nav-links">
@@ -54,8 +54,8 @@
             </div>
 
             <div class="board-center">
-                <img src="https://images.unsplash.com/photo-1606167668584-78701c57f13d?q=80&w=500&auto=format&fit=crop" alt="Slaps Table Cards" class="hero-cards">
-            </div>
+    <img src="assets/Cards.png" alt="Slaps Table Cards" class="hero-cards">
+</div>
 
             <div class="player-profile player">
                 <div class="avatar"></div>
