--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         
         <nav class="sidebar-left">
             <div class="logo-area">
-                <div class="logo-area">
-    <img src="assets/ISF Pink.png" alt="ISF Logo" class="isf-logo">
+    <img src="assets/ISF_pink.png" alt="ISF" class="isf-logo">
 </div>
             </div>
 
