--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         
         <nav class="sidebar-left">
             <div class="logo-area">
-    <img src="assets/ISF_pink.png" alt="ISF" class="isf-logo">
-</div>
+                <img src="assets/ISF_pink.png" alt="ISF" class="isf-logo">
             </div>
 
             <ul class="nav-links">
@@ -53,8 +52,8 @@
             </div>
 
             <div class="board-center">
-    <img src="assets/Cards.png" alt="Slaps Table Cards" class="hero-cards">
-</div>
+                <img src="assets/hero-cards.png" alt="Slaps Table Cards" class="hero-cards">
+            </div>
 
             <div class="player-profile player">
                 <div class="avatar"></div>
