--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     </div>
                 </div>
 
-                <div class="menu-card disabled">
-                    <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
-                    <div class="card-text">
-                        <h3>Play Bots</h3>
-                        <p>Challenge a bot from Easy to Master</p>
-                    </div>
-                </div>
+                <div class="menu-card" onclick="window.location.href='setup.html'" style="cursor: pointer;">
+    <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
+    <div class="card-text">
+        <h3>Play Bots</h3>
+        <p>Challenge a bot from Easy to Master</p>
+    </div>
+</div>
 
                 <div class="menu-card disabled">
                     <div class="card-icon"><i class="fa-solid fa-handshake-simple"></i></div>
