--- a/game.html
+++ b/game.html
@@ -35,15 +35,8 @@
 
     <div class="game-board">
         
-        <div class="zone foundation-zone opponent-zone">
-            <div class="foundation-piles">
-                <div class="fp-slot"><img src="assets/cards/back_of_card.png" class="game-card opponent-card"></div>
-                <div class="fp-slot"><img src="assets/cards/back_of_card.png" class="game-card opponent-card"></div>
-                <div class="fp-slot"><img src="assets/cards/back_of_card.png" class="game-card opponent-card"></div>
-                <div class="fp-slot"><img src="assets/cards/back_of_card.png" class="game-card opponent-card"></div>
-            </div>
-        </div>
-
+        <div class="foundation-piles" id="opponent-foundation">
+    </div>
         <div class="zone middle-zone">
             
             <div class="deck-slot top-deck" id="ai-draw-deck">
@@ -65,14 +58,8 @@
 
         </div>
 
-        <div class="zone foundation-zone player-zone">
-             <div class="foundation-piles">
-                <div class="fp-slot"><img src="assets/cards/2_of_clubs.png" class="game-card player-card"></div>
-                <div class="fp-slot"><img src="assets/cards/ace_of_spades.png" class="game-card player-card"></div>
-                <div class="fp-slot"><img src="assets/cards/2_of_clubs.png" class="game-card player-card"></div>
-                <div class="fp-slot"><img src="assets/cards/ace_of_spades.png" class="game-card player-card"></div>
-            </div>
-        </div>
+       <div class="foundation-piles" id="player-foundation">
+    </div>
 
     </div>
 
