--- a/game.html
+++ b/game.html
@@ -13,32 +13,30 @@
         <button class="btn-quit" onclick="window.location.href='index.html'">QUIT MATCH</button>
     </div>
 
+    <div id="countdown-overlay" class="hidden">3</div>
+
     <div class="game-board">
         
-        <div class="foundation-box opponent-box" id="ai-foundation-area">
-            </div>
+        <div class="foundation-box opponent-box" id="ai-foundation-area"></div>
 
         <div class="center-zone">
             
             <div class="deck-area" id="ai-draw-deck">
                 <img src="assets/cards/back_of_card.png" class="card-back" draggable="false">
-                <span class="deck-count" id="ai-count">26</span>
-            </div>
+                </div>
 
             <div class="battlefield">
                 <div class="center-pile" id="center-pile-left"></div>
                 <div class="center-pile" id="center-pile-right"></div>
             </div>
 
-            <div class="deck-area" id="player-draw-deck">
+            <div class="deck-area" id="player-draw-deck" onclick="handlePlayerDeckClick()">
                 <img src="assets/cards/back_of_card.png" class="card-back" draggable="false">
-                <span class="deck-count" id="player-count">26</span>
             </div>
 
         </div>
 
-        <div class="foundation-box player-box" id="player-foundation-area">
-            </div>
+        <div class="foundation-box player-box" id="player-foundation-area"></div>
 
     </div>
 
