--- a/setup.html
+++ b/setup.html
@@ -14,11 +14,11 @@
         
         <nav class="sidebar-left">
             <div class="logo-area">
-                <img src="assets/ISF_pink.png" alt="ISF" class="isf-logo">
-            </div>
+               <img src="assets/ISF_pink.png" alt="ISF" class="isf-logo">
+           </div>
             <ul class="nav-links">
-                <li><a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back to Home</a></li>
-            </ul>
+               <li><a href="index.html"><i class="fa-solid fa-arrow-left"></i> Back to Home</a></li>
+           </ul>
         </nav>
 
         <main class="game-board-area" style="flex-direction: column;">
@@ -44,7 +44,7 @@
                     </div>
                 </div>
 
-                <button class="btn-start" onclick="window.location.href='game.html'">START MATCH</button>
+                <button class="btn-start">START MATCH</button>
             </div>
 
         </main>
@@ -108,6 +108,6 @@
 
     // Initialize
     updateUI();
-</script>
+    </script>
 </body>
 </html>
