--- a/game.html
+++ b/game.html
@@ -12,10 +12,13 @@
     <div class="ui-widget-left" style="top: 20%; left: 20px;">
         <span class="stat-label">AI CARDS</span>
         <div class="stat-value text-red" id="score-ai">26</div>
+        <div class="penalty-box" id="ai-penalties"></div>
     </div>
+
     <div class="ui-widget-right" style="top: 20%; right: 20px;">
         <span class="stat-label">YOUR CARDS</span>
         <div class="stat-value text-green" id="score-player">26</div>
+        <div class="penalty-box" id="player-penalties"></div>
     </div>
 
     <div class="ui-widget-left" style="bottom: 20px; top: auto;">
@@ -30,35 +33,31 @@
         <button class="btn-start" id="msg-btn" onclick="nextRound()">CONTINUE</button>
     </div>
 
-    <div class="game-board">
-        
-        <div class="foundation-box opponent-box" id="ai-foundation-area"></div>
+    <div id="slap-overlay" class="slap-modal hidden">
+        <h1 id="slap-text">PLAYER SLAPS WON!</h1>
+    </div>
 
+    <div class="game-board">
+        <div class="foundation-box opponent-box" id="ai-foundation-area"></div>
         <div class="center-zone">
-            
             <div class="deck-wrapper">
                 <div class="deck-area" id="ai-draw-deck">
                     <img src="assets/cards/back_of_card.png" class="card-back" draggable="false">
                 </div>
                 <div id="borrowed-ai" class="borrowed-text hidden">BORROWED</div>
             </div>
-
             <div class="battlefield">
                 <div class="center-pile" id="center-pile-left"></div>
                 <div class="center-pile" id="center-pile-right"></div>
             </div>
-
             <div class="deck-wrapper">
                 <div class="deck-area" id="player-draw-deck" onclick="handlePlayerDeckClick()">
                     <img src="assets/cards/back_of_card.png" class="card-back" draggable="false">
                 </div>
                 <div id="borrowed-player" class="borrowed-text hidden">BORROWED</div>
             </div>
-
         </div>
-
         <div class="foundation-box player-box" id="player-foundation-area"></div>
-
     </div>
 
     <script src="game.js"></script>
