--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
 
             <div class="menu-options">
                 
-                <div class="menu-card disabled">
-                    <div class="card-icon"><i class="fa-solid fa-bolt"></i></div>
-                    <div class="card-text">
-                        <h3>Play Online</h3>
-                        <p>Play vs a person of similar skill</p>
-                    </div>
-                </div>
+                <div class="menu-card" onclick="window.location.href='multiplayer-setup.html'" style="cursor: pointer;">
+    <div class="card-icon"><i class="fa-solid fa-bolt"></i></div>
+    <div class="card-text">
+        <h3>Play a Friend</h3>
+        <p>Host or Join using a code</p>
+    </div>
+</div>
 
                 <div class="menu-card" onclick="window.location.href='setup.html'" style="cursor: pointer;">
     <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
