--- a/index.html
+++ b/index.html
@@ -105,10 +105,13 @@
 
             </div>
 
-            <div class="menu-footer">
-                <div class="footer-btn disabled"><i class="fa-solid fa-box-archive"></i> Game History</div>
-                <div class="footer-btn disabled"><i class="fa-solid fa-chart-simple"></i> Leaderboard</div>
-            </div>
+           <a href="https://sprucewilliams.github.io/Slaps-Online/matchtable.html" class="menu-item" style="text-decoration: none; color: inherit; display: block; margin-bottom: 10px;">
+    <i class="fa-solid fa-table-list"></i> Game History
+</a>
+
+<a href="https://sprucewilliams.github.io/Slaps-Online/ratingtable.html" class="menu-item" style="text-decoration: none; color: inherit; display: block;">
+    <i class="fa-solid fa-chart-simple"></i> Leaderboard
+</a>
 
         </aside>
 
