--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <main class="hero-area">
             <div class="card-display">
-                <img src="assets/cards/ace_of_spades.png" alt="Ace of Spades" class="hero-card-img">
+                <img src="assets/cards/ace_of_hearts.png" alt="Ace of Hearts" class="hero-card-img">
             </div>
         </main>
 
