--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="how-to-play.html"><i class="fa-solid fa-book-open"></i> How to Play</a></li>
                 <li><a href="https://sprucewilliams.github.io/Slaps-Online/matchtable.html"><i class="fa-solid fa-table-list"></i> Game History</a></li>
                 <li><a href="https://sprucewilliams.github.io/Slaps-Online/ratingtable.html"><i class="fa-solid fa-trophy"></i> Leaderboard</a></li>
-                <li><a href="rules.html"><i class="fa-solid fa-scale-balanced"></i> Rules & Regs</a></li>
+                <li><a href="assets/SLAPS rules and regs v1.2-compressed.pdf" target="_blank"><i class="fa-solid fa-scale-balanced"></i> Rules & Regs</a></li>
             </ul>
 
             <div class="sidebar-bottom">
