--- a/game.html
+++ b/game.html
@@ -8,7 +8,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="game-body" ondragstart="return false;" ondrop="return false;">
-
+    <div id="scoreboard-widget" class="scoreboard-widget">
+    <div class="sb-header">
+        <span>PLAYER</span>
+        <span>ROUNDS</span>
+        <span>SLAPS</span>
+    </div>
+    <div class="sb-row">
+        <span id="sb-p1-name">You</span>
+        <span id="sb-p1-rounds">0</span>
+        <span id="sb-p1-slaps">0</span>
+    </div>
+    <div class="sb-row">
+        <span id="sb-p2-name">AI</span>
+        <span id="sb-p2-rounds">0</span>
+        <span id="sb-p2-slaps">0</span>
+    </div>
+</div>
     <div class="ui-widget-left" style="top: 20%; left: 20px;">
         <span class="stat-label">AI CARDS</span>
         <div class="stat-value text-red" id="score-ai">26</div>
