--- a/game.html
+++ b/game.html
@@ -8,6 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body class="game-body" ondragstart="return false;" ondrop="return false;">
+    <div class="bottom-left-actions">
+    <button class="btn-action-small btn-quit" onclick="window.location.href='index.html'">
+        <i class="fa-solid fa-door-open"></i> Quit Match
+    </button>
+    <button class="btn-action-small" onclick="window.location.reload()">
+        <i class="fa-solid fa-rotate-right"></i> Restart
+    </button>
+</div>
     <div id="scoreboard-widget" class="scoreboard-widget">
     <div class="sb-header">
         <span>PLAYER</span>
@@ -38,7 +46,6 @@
     </div>
 
     <div class="ui-widget-left" style="bottom: 20px; top: auto;">
-        <button class="btn-quit" onclick="window.location.href='index.html'">QUIT MATCH</button>
     </div>
 
     <div id="countdown-overlay" class="hidden">3</div>
