--- a/setup.html
+++ b/setup.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="setup-page">
 
     <div class="app-container">
         
@@ -109,5 +109,5 @@
     // Initialize
     updateUI();
     </script>
-</body>
+<body class="setup-page">
 </html>
