multiplayer-setup.html

--- a/multiplayer-setup.html
+++ b/multiplayer-setup.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/peerjs@1.4.7/dist/peerjs.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="setup-page">
 
     <div class="app-container">
         
@@ -143,5 +143,5 @@
             }
         }
     </script>
-</body>
+<body class="setup-page">
 </html>
