how-to-play.html

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-trophy icon-gold"></i>
                     <h3>The Objective</h3>
                 </div>
-                <p>The goal is simple: <strong>Bankrupt your opponent.</strong> You win the match when you run out of cards completely.</p>
+                <p>The goal is simple: <strong>Get rid of ALL your cards.</strong> You win the match by playing your cards quciker than your opponent and play your last card.</p>
             </div>
 
             <div class="rule-box green-border">
