multiplayer-game.html

--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -78,7 +78,7 @@
         </div>
         <div class="foundation-box player-box" id="player-foundation-area"></div>
     </div>
-<div id="rematch-modal" class="message-modal hidden" style="z-index: 3000;">
+<div id="rematch-modal" class="message-modal hidden" style="z-index: 5000; margin-top: 200px;">
     <h1>REMATCH?</h1>
     <p>Your opponent wants to play again.</p>
     <div style="display:flex; gap:15px; justify-content:center; margin-top:20px;">
