--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 </div>
             </div>
 
-            <div class="mode-card blue disabled">
-                <div class="mode-icon"><i class="fa-solid fa-globe"></i></div>
-                <div class="mode-info">
-                    <h3>Play Online</h3>
-                    <span>Matchmaking</span>
-                </div>
-            </div>
+            <div class="mode-card blue" onclick="window.location.href='matchmaking.html'">
+    <div class="mode-icon"><i class="fa-solid fa-globe"></i></div>
+    <div class="mode-info">
+        <h3>Play Online</h3>
+        <span>Matchmaking</span>
+    </div>
+</div>
 
             <div class="mode-card gold" onclick="window.location.href='tournament-setup.html'">
                 <div class="mode-icon"><i class="fa-solid fa-trophy"></i></div>
