--- a/tournament-game.html
+++ b/tournament-game.html
@@ -80,6 +80,6 @@
         <div class="foundation-box player-box" id="player-foundation-area"></div>
     </div>
 
-    <script src="game.js"></script>
+   <script src="tournament-game.js"></script>
 </body>
 </html>
