tournament-match.html

--- a/tournament-match.html
+++ b/tournament-match.html
@@ -173,7 +173,7 @@
             localStorage.setItem('gamemode', 'tournament'); // Tell game.js we are in tourney
             localStorage.setItem('slapsDifficulty', data.diff); // Set bot level
             
-            window.location.href = 'game.html';
+           window.location.href = 'tournament-game.html';
         }
 
         function showWinnerScreen() {
