--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         
         <nav class="sidebar-left">
             <div class="logo-area-sidebar">
-                <span class="logo-text-blue">ISF Online</span>
-            </div>
+    <img src="assets/ISF_ONLINE.png" alt="ISF Online" class="sidebar-logo">
+</div>
 
             <ul class="nav-links">
                 <li class="active"><a href="#">Home</a></li>
