multiplayer-game.html

--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -26,12 +26,12 @@
         <span id="sb-p1-rounds">0</span>
         <span id="sb-p1-slaps">0</span>
     </div>
-    <div class="sb-row">
+    <<div class="sb-row">
         <span id="sb-p2-name">AI</span>
         <span id="sb-p2-rounds">0</span>
         <span id="sb-p2-slaps">0</span>
     </div>
-<div class="ui-widget-left" style="top: 20%; left: 20px;">
+</div> <div class="ui-widget-left" style="top: 20%; left: 20px;">
     <span id="opponent-display-name" class="stat-label">OPPONENT</span>
     <div class="stat-value text-red" id="score-ai">26</div>
     <div class="penalty-box" id="ai-penalties"></div>
