multiplayer-game.html

--- a/multiplayer-game.html
+++ b/multiplayer-game.html
@@ -26,7 +26,7 @@
         <span id="sb-p1-rounds">0</span>
         <span id="sb-p1-slaps">0</span>
     </div>
-    <<div class="sb-row">
+    <div class="sb-row">
         <span id="sb-p2-name">AI</span>
         <span id="sb-p2-rounds">0</span>
         <span id="sb-p2-slaps">0</span>
