how-to-play.html

--- a/how-to-play.html
+++ b/how-to-play.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="action-area">
-            <button class="btn-play-now" onclick="window.location.href='index.html'">PLAY NOW</button>
+            <button class="btn-play-now" onclick="window.location.href='index.html'">BACK HOME</button>
         </div>
 
     </div>
